<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gerenciamento-Fiado</string>
    <string name="action_settings">Settings</string>

    <!-- strings da TELALOGIN -->
    <string name="nomeAplicativo">FIADO SYSTEM</string>
    <string name="loginTelaLogin">LOGIN</string>
    <string name="senhaTelaLogin">SENHA</string>
    <string name="cadastrarTelaLogin">CADASTRE-SE</string>
    <string name="entrarTelaLogin">ENTRAR</string>

    <!-- strings do MENUPRINCIPAL -->
    <string name="gerenciarCliente">CLIENTE</string>
    <string name="gerenciarVendedor">VENDEDOR</string>
    <string name="gerenciarProduto">PRODUTO</string>
    <string name="gerenciarContas">CONTAS</string>
    <string name="gerenciarVendas">VENDAS</string>
    <string name="gerenciarConfiguracoes">CONFIGURAÇÕES</string>
    <string name="menuprincipal">MENU PRINCIPAL</string>
    <string name="title_activity_gerenciar_cliente"></string>

    <!-- strings do GERENCIARCLIENTE -->
    <string name="cadastrarCliente">CADASTRAR CLIENTE</string>
    <string name="atualizarCliente">ATUALIZAR CLIENTE</string>
    <string name="buscarCliente">BUSCAR CLIENTE</string>
    <string name="excluirCliente">EXCLUIR CLIENTE</string>
    <string name="title_activity_cadastrar_cliente">Cadastrar Cliente</string>

    <!--
         strings comuns do GERENCIARCLIENTE -> 
    	 CADASTRARCLIENTE 
    	 ATUALIZARCLINTE
    	 BUSCARCLIENTE
    	 EXCLUIRCLIENTE
    -->

    <string name="title_activity_atualizar_cliente">Atualizar Cliente</string>
    <string name="title_activity_buscar_cliente">Buscar Cliente</string>
    <string name="title_activity_excluir_cliente">Excluir Cliente</string>
    <string name="nomeCliente">NOME:</string>
    <string name="enderecoCliente">ENDEREÇO:</string>
    <string name="cepCliente">CEP:</string>
    <string name="cpfCliente">CPF:</string>
    <string name="rgCliente">RG:</string>
    <string name="telefoneCliente">TELEFONE:</string>
    <string name="cidadeCliente">CIDADE:</string>
    <string name="bairroCliente">BAIRRO:</string>
    <string name="ufCliente">ESTADO:</string>
    <string name="numeroCasaCliente">NUMERO:</string>
    <string name="dadosPessoaisCliente">DADOS PESSOAIS DO CLIENTE:</string>
    <string name="dadosEnderecoCliente">ENDEREÇO DO CLIENTE:</string>
    <string name="title_activity_novo_cliente">NOVO CLIENTE</string>
    <string name="cadastrarClienteRemotamente">Cadastrar vendedor no servidor</string>

    <!-- strings do GERENCIARVENDEDOR -->
    <string name="cadastrarVendedor">CADASTRAR VENDEDOR</string>
    <string name="atualizarVendedor">ATUALIZAR VENDEDOR</string>
    <string name="buscarVendedor">BUSCAR VENDEDOR</string>
    <string name="excluirVendedor">EXCLUIR VENDEDOR</string>

    <!--
         strings comuns do GERENCIARVENDEDOR -> 
    	 CADASTRARVENDEDOR 
    	 ATUALIZARVENDEDOR
    	 BUSCARVENDEDOR
    	 EXCLUIRVENDEDOR
    -->

    <string name="title_activity_cadastrar_vendedor">Cadastrar Vendedor</string>
    <string name="title_activity_atualizar_vendedor">Atualizar Vendedor</string>
    <string name="title_activity_excluir_vendedor">Excluir Vendedor</string>
    <string name="nomeVendedor">NOME:</string>
    <string name="enderecoVendedor">ENDEREÇO:</string>
    <string name="cepVendedor">CEP:</string>
    <string name="cpfVendedor">CPF:</string>
    <string name="rgVendedor">RG:</string>
    <string name="telefoneVendedor">TELEFONE:</string>
    <string name="cidadeVendedor">CIDADE:</string>
    <string name="bairroVendedor">BAIRRO:</string>
    <string name="ufVendedor">ESTADO:</string>
    <string name="loginVendedor">LOGIN:</string>
    <string name="senhaVendedor">SENHA:</string>
    <string name="numeroCasaVendedor">NUMERO:</string>
    <string name="dadosPessoaisVendedor">DADOS PESSOAIS DO VENDEDOR:</string>
    <string name="dadosEnderecoVendedor">ENDEREÇO DO VENDEDOR:</string>

    <!-- strings do botão SALVAR, APAGAR, EXCLUIR, BUSCAR, 	CANCELAR, PESQUISAR -->
    <string name="salvar">SALVAR</string>
    <string name="apagar">APAGAR</string>
    <string name="alterar">ALTERAR</string>
    <string name="excluir">EXCLUIR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="pesquisar">PESQUISAR</string>

    <!-- strings do GERENCIARPRODUTO -->
    <string name="cadastrarProduto">CADASTRAR PRODUTO</string>
    <string name="atualizarProduto">ATUALIZAR PRODUTO</string>
    <string name="buscarProduto">BUSCAR PRODUTO</string>
    <string name="excluirProduto">EXCLUIR PRODUTO</string>
    <string name="title_activity_cadastrar_produto">Cadastrar Produto</string>
    <string name="title_activity_atualizar_produto">Atualizar Produto</string>
    <string name="title_activity_buscar_produto">Buscar Produto</string>
    <string name="title_activity_excluir_produto">Excluir Produto</string>

    <!--
         strings comuns do GERENCIARProduto -> 
    	 CADASTRARPRODUTO 
    	 ATUALIZARPRODUTO
    	 BUSCARPRODUTO
    	 EXCLUIRPRODUTO
    -->

    <string name="nomeProduto">DESCRIÇÃO:</string>
    <string name="precoProduto">PREÇO:</string>
    <string name="dadosProduto">DADOS DO PRODUTO:</string>

    <!-- Strings -->
    <string name="title_activity_gerenciar_produtos">GerenciarProdutos</string>
    <string name="title_activity_gerenciar_produto">Gerenciar Produtos</string>
    <string name="tipo">Tipo do produto</string>
    <string name="title_activity_cadastrar_contas">Cadastro de Contas</string>
    <string name="title_activity_gerenciar_contas">Gerenciar Contas</string>
    <string name="title_activity_login">Login</string>
    <string name="BuscarClienteHint">Pesquisar Cliente</string>
    <string name="BuscarProdutoHint">Pesquisar Produto</string>

    <!-- String dos popups -->
    <string name="BuscarClienteButton">Pesquisar</string>

    <!-- String dod popups -->
    <string name="atualizarMenuPopup">ATUALIZAR</string>
    <string name="excluirMenuPopup">EXCLUIR</string>
    <string name="title_activity_buscar_tela_excluir_cliente">BuscarTelaExcluirCliente</string>
    <string name="title_activity_buscar_cliente_excluir">BuscarClienteExcluir</string>
    <string name="title_activity_excluir_produto_list">ExcluirProdutoList</string>
    <string name="title_activity_configuracoes">Configuracoes</string>

    <!-- String para o arquivo de configurações -->
    <string name="confBackgroundPadraoTitulo">Padrão</string>
    <string name="confBackgroundRosaTitulo">Rosa</string>
    <string name="confBackgroundAmareloTitulo">Amarelo</string>
    <string name="confBackgroundVerdeTitulo">Verde</string>
    <string name="salvarDadosRemotoTitulo">Salvar Remotamente</string>
    <string name="salvarDadosRemotoTituloSummary">Sempre salvar os dados remotamente</string>
    <string name="backgroundPadraoKey">backgroundPadraoKey</string>
    <string name="backgroundPadraoKeySummaray">A cor de fundo padrão do sistema</string>
    <string name="backgroundRosa">backgroundRosa</string>
    <string name="salvarDadosRemotamenteKey">salvarDadosRemotamenteKey</string>
    <string name="idiomaTille">idioma</string>
    <string name="idiomaTilleKey">idiomaTilleKey</string>
    <string name="TamanhoFonte">Fonte</string>
    <string name="TamanhoFontekey">TamanhoFontekey</string>

    <!-- String do GERENCIAR VENDA -->
    <string name="cadastrarVenda">CADASTRAR VENDA</string>
    <string name="buscarVenda">BUSCAR VENDA</string>
    <string name="excluirVenda">EXCLUIR VENDA</string>
    <string name="codigo_descricao_produto">CÓDIGO / DESCRICAO DO PRODUTO</string>
    <string name="quantidade_prod">QUANTIDADE:</string>
    <string name="valorTotal">VALOR TOTAL:</string>
    <string name="cancelarVenda">CANCELAR</string>
    <string name="finalizarVenda">FINALIZAR VENDA</string>
    <string name="calcularValorTotal">CALCULAR</string>
    <string name="descricaoProduto">Descrição:</string>
    <string name="clienteVenda">CLIENTE:</string>
    <string name="title_activity_cadastrar_vendas">CadastrarVendas</string>
    <string name="title_activity_gerenciar_venda">GerenciarVenda</string>
    <string name="title_activity_compartilhar_rede_social">CompartilharRedeSocial</string>

    <!-- Strings do BUSCAR CLIENTE -->
    <string name="atualizarClienteBuscar">Atualizar dados do cliente</string>
    <string name="searchClienteMap">Procurar o cliente no mapa</string>
</resources>
