<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutGerenciarConta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GerenciarVendaActivity" >

    <Button
        android:id="@+id/buttonExcluirTelaGerenciarVenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/excluirVenda"
        android:width="400dp" />

    <Button
        android:id="@+id/buttonCadastrarTelaGerenciarVenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonBuscarTelaGerenciarVenda"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/cadastrarVenda"
        android:width="400dp" />

    <Button
        android:id="@+id/buttonBuscarTelaGerenciarVenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonExcluirTelaGerenciarVenda"
        android:layout_below="@+id/buttonCadastrarTelaGerenciarVenda"
        android:layout_marginTop="42dp"
        android:text="@string/buscarCliente"
        android:width="400dp" />

</RelativeLayout>
